--- a/lexiflux/templates/book.html
+++ b/lexiflux/templates/book.html
@@ -2,75 +2,31 @@
 <html>
 <head>
     <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
-    <style>
-        /* Body and Container Styles */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-        #articles {
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            gap: 20px;
-            max-width: 1200px;
-            margin: auto;
-            padding: 20px;
-        }
-        h1 {
-            grid-column: 1 / -1;  /* Span all columns */
-            margin-bottom: 20px;
-            text-align: center;
-            text-decoration: underline;
-        }
 
-        /* Article Styles */
-        .article {
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 8px;
-        }
-
-        .article h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-        .image-container {
-            display: flex;
-            justify-content: center;
-        }
-        .article img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        .article p {
-            text-align: justify;
-        }
-    </style>
+    <!-- Add Bootstrap 5 CSS link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-<h1>Book</h1>
-<div id="articles">
-    {% for page in pages %}
-    <div class="article">
-        <h2>{{ page.number }}</h2>
-        <p>{{ page.content }}</p>
 
+<body>
+<h1 class="text-center">Book</h1>
+<div id="articles" class="row">
+    {% for page in pages %}
+    <div id="pages">
+        <h2 class="card-title text-center">{{ page.number }}</h2>
+        <p class="card-text">{{ page.content }}</p>
         {% if pages.has_next and forloop.last %}
         <span hx-get="{% url 'book' %}?page={{ pages.next_page_number }}"
-              hx-swap="beforeend" hx-target="#articles" hx-select=".article"
+              hx-swap="beforeend" hx-target="#articles" hx-select="#pages"
               hx-trigger="revealed">
             </span>
         {% endif %}
-
     </div>
     {% endfor %}
-
 </div>
 
+<!-- Bootstrap 5 JavaScript (requires Popper.js) -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
