--- a/lexiflux/templates/book.html
+++ b/lexiflux/templates/book.html
@@ -1,35 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
-
-    <!-- Add Bootstrap 5 CSS link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-
-<body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="#">Book</a>
-    </div>
-</nav>
-
-<div id="page-scroll" style="margin-top: 70px;">
-    <div class="row justify-content-center"
-            hx-get="{% url 'bookPage' %}?page={{ page.number|add:1 }}"
-            hx-trigger="revealed"
-            hx-swap="afterend">
-        <div id="page-{{ page.number }}" class="col-10">
-            <h2 class="card-title text-center">{{ page.number }}</h2>
-            <p class="card-text">{{ page.content }}</p>
+{% extends "base.html" %}
+{% block content %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Book</a>
         </div>
+    </nav>
+
+    <div id="page-scroll" style="margin-top: 70px;">
+        {% include "page.html" %}
     </div>
-</div>
-
-<!-- Bootstrap 5 JavaScript (requires Popper.js) -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-</body>
-</html>
+{% endblock %}
