--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -3,6 +3,29 @@
     <head>
         <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <style>
+            body, html {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+            }
+
+            #word-container {
+                flex-grow: 1; /* Allows the container to expand to fill available space */
+                overflow-y: auto; /* Adds scroll if content overflows */
+                padding: 10px;
+                margin-bottom: 50px;
+            }
+
+            .navbar-fixed-bottom {
+                width: 100%;
+                position: fixed;
+                bottom: 0;
+                height: 50px;
+            }
+        </style>
     </head>
     <body>
         {% block content %}{% endblock %}
