--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -1,7 +1,7 @@
 
 {% for word in words %}
-    <span id="word-{{ forloop.counter }}"
-          hx-trigger="click" class="word"
-          hx-get="{% url 'word' %}?id={{ page.number }}:{{ forloop.counter }}"
+    <span id="word-{{ forloop.counter }}" class="word"
+          hx-trigger="click"
+          hx-get="{% url 'word' %}?id={{ forloop.counter }}"
           hx-swap="outerHTML">{{ word }}</span>
 {% endfor %}
