--- a/lexiflux/templates/book.html
+++ b/lexiflux/templates/book.html
@@ -1,16 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button
-                    class="btn btn-primary"
-                    id="next-button"
-                    hx-get="{% url 'book-page' %}"
-                    hx-target="#word-container"
-                    hx-swap="innerHTML">
-                Next
-            </button>
+    <nav class="navbar">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
+        <button
+            class="btn btn-primary"
+            id="prev-button"
+            hx-get="{% url 'previous-page' %}"
+            hx-target="#word-container"
+            hx-swap="innerHTML">
+            &#8592; <!-- Left arrow -->
+        </button>
+
+        <div class="button-title-spacer"></div>
+        <div class="mx-3 text-truncate" style="flex-grow: 1;">
+            {{ book.title }}
+        </div>
+        <div class="button-title-spacer"></div>
+
+        <button
+            class="btn btn-primary"
+            id="next-button"
+            hx-get="{% url 'next-page' %}"
+            hx-target="#word-container"
+            hx-swap="innerHTML">
+            &#8594; <!-- Right arrow -->
+        </button>
         </div>
     </nav>
 
