--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -20,11 +20,11 @@
         </div>
     </nav>
 
-    <div id="word-container" class="container-fluid flex-grow-1">
+    <div id="words-container" class="container-fluid flex-grow-1">
         ???
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-bottom">
         <div class="container-fluid">
                 Next
         </div>
