--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -2,21 +2,11 @@
 
     <nav class="navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
-        <button
-            class="btn btn-primary"
-            id="prev-button">
-            &#8592; <!-- Left arrow -->
-        </button>
 
         <div class="mx-3 text-truncate title-container">
             {{ book.title }}
         </div>
 
-        <button
-            class="btn btn-primary"
-            id="next-button">
-            &#8594; <!-- Right arrow -->
-        </button>
         </div>
     </nav>
 
@@ -25,8 +15,20 @@
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-bottom">
-        <div class="container-fluid">
-                Next
+        <button
+            class="btn btn-primary"
+            id="prev-button">
+            &#8592; <!-- Left arrow -->
+        </button>
+
+        <div class="mx-3 text-truncate title-container">
+            {{ page.number }}
         </div>
+
+        <button
+            class="btn btn-primary"
+            id="next-button">
+            &#8594; <!-- Right arrow -->
+        </button>
     </nav>
 </div>
