--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -48,11 +48,11 @@
             let pageNum = {{ page.number }};
             let bookId = {{ book.id }};
 
-            function getLastVisibleWord() {
+            function getLastVisibleWord(filledFromWord) {
+                let lastVisibleWordIndex = filledFromWord !== undefined ? filledFromWord : topWord;
                 let containerRect = wordsContainer.getBoundingClientRect();
-                let lastVisibleWordIndex = topWord;
 
-                for (let i = topWord; i < wordsArray.length; i++) {
+                for (let i = lastVisibleWordIndex; i < wordsArray.length; i++) {
                     let wordId = 'word-' + i;
                     let wordElement = document.getElementById(wordId);
 
@@ -75,25 +75,36 @@
                 return lastVisibleWordIndex - topWord + 1;
             }
 
-            function getPrevViewport() {
+            function findViewportStart(targetLastWord) {
                 // Search for the topWord where the last visible word is the word before the current topWord
-                let targetLastWord = topWord - 1;
-                // start with heuristic to narrow down the search: go back by 2 viewports number of words
-                let low = Math.max(0, topWord - getVisibleWordsNum() * 2);
+                if (targetLastWord === undefined) {
+                    targetLastWord = topWord - 1;
+                }
                 let high = topWord - 1;
 
-                let result = binarySearchForTopWord(low, high, targetLastWord);
-                if (result !== -1) {
-                    return result;
+                // start with heuristic to narrow down the search: go back by 2 viewports number of words
+                let result = binarySearchForTopWord(Math.max(0, topWord - getVisibleWordsNum() * 2), high, targetLastWord);
+                if (result === -1) {
+                    // If the heuristic-based search fails, start a search from the beginning
+                    result = binarySearchForTopWord(0, high, targetLastWord);
                 }
-
-                // If the heuristic-based search fails, start a new search from the beginning
-                result = binarySearchForTopWord(0, high, targetLastWord);
                 if (result !== -1) {
+                    // try squeeze more words in the viewport
+                    for (let i = result; i >= 0; i--) {
+                        suppressRedraw(wordsContainer);
+                        fillContainerWithWords(i);
+                        resumeRedraw(wordsContainer);
+                        if (getLastVisibleWord(i) === targetLastWord) {
+                            result = i;
+                        } else {
+                            break;
+                        }
+                    }
                     return result;
                 }
                 else {
                     // If the search did not find the exact match, shift viewport to the beginning
+                    fillContainerWithWords(0)
                     return 0;
                 }
             }
@@ -105,19 +116,21 @@
                     fillContainerWithWords(mid);
                     resumeRedraw(wordsContainer);
 
-                    let lastVisibleWord = getLastVisibleWord();
+                    let lastVisibleWord = getLastVisibleWord(mid);
 
                     if (lastVisibleWord < targetLastWord) {
                         low = mid + 1;
                     } else if (lastVisibleWord > targetLastWord) {
                         high = mid;
                     } else {
-                        // Found the topWord where the last visible word is our targetLastWord
                         return mid;
                     }
                 }
-                // If the search did not find the exact match, return -1
-                return -1;
+                fillContainerWithWords(low);
+                if (getLastVisibleWord(low) === targetLastWord)
+                    return low;
+                else
+                    return -1;
             }
 
             function fillContainerWithWords(startWordIndex) {
@@ -157,11 +170,6 @@
                     // Temporarily add the word to the container to measure it
                     wordsContainer.appendChild(wordSpan);
 
-                    // If it's a reused span, reprocess it with HTMX
-                    if (!isNewSpan) {
-                        htmx.process(wordSpan);
-                    }
-
                     // Check if the word fits fully within the container
                     // let wordRect = wordSpan.getBoundingClientRect();
                     // if (wordRect.bottom > containerRect.bottom || wordRect.right > containerRect.right) {
@@ -173,6 +181,7 @@
                     // Add a space after the word
                     wordsContainer.appendChild(document.createTextNode(' '));
                 }
+                htmx.process(wordsContainer);
             }
 
             function suppressRedraw(container) {
@@ -184,31 +193,37 @@
             }
 
             function loadPage(pageNumber) {
-                fetch('/page?page-num=' + pageNumber)
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error('Network response was not ok');
-                        }
-                        return response.json(); // Parse the JSON response
-                    })
-                    .then(data => {
-                        document.getElementById('book').innerHTML = data.html;
-                        // Update global variables with new data
-                        if (data.data) {
-                            wordsArray = data.data.words;
-                            totalWords = wordsArray.length;
-                            topWord = data.data.topWord;
-                            pageNum = parseInt(data.data.pageNum);
-                            bookId = data.data.bookId;
-                            reInitDom();
-                            fillContainerWithWords(topWord);
-                            htmx.process(wordsContainer);  // Process HTMX attributes in the new HTML
-                        } else {
-                            console.error('Invalid or missing data in response');
-                            console.log("Response data:", data);
-                        }
-                    })
-                    .catch(error => console.error('Error:', error));
+                return new Promise((resolve, reject) => {
+                    fetch('/page?page-num=' + pageNumber)
+                        .then(response => {
+                            if (!response.ok) {
+                                throw new Error('Network response was not ok');
+                            }
+                            return response.json(); // Parse the JSON response
+                        })
+                        .then(data => {
+                            document.getElementById('book').innerHTML = data.html;
+                            // Update global variables with new data
+                            if (data.data) {
+                                wordsArray = data.data.words;
+                                totalWords = wordsArray.length;
+                                topWord = data.data.topWord;
+                                pageNum = parseInt(data.data.pageNum);
+                                bookId = data.data.bookId;
+                                reInitDom();
+                                fillContainerWithWords(topWord);
+                                resolve(); // Resolve the promise after updating the DOM
+                            } else {
+                                console.error('Invalid or missing data in response');
+                                console.log("Response data:", data);
+                                reject(new Error('Invalid or missing data in response'));
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                            reject(error); // Reject the promise in case of an error
+                        });
+                });
             }
 
             function reportVieportChange() {
@@ -221,8 +236,7 @@
                         return response.text();
                     })
                     .then(data => {
-                        console.log('Server response:', data);
-                        // Optionally update the UI based on the server's response
+                        // No need to process the server's response
                     })
                     .catch(error => console.error('Error:', error));
             }
@@ -234,24 +248,23 @@
                 event.detail.parameters['top-word'] = topWord;
             });
 
-            function handlePrevButtonClick() {
+            async function handlePrevButtonClick() {
                 if (topWord === 0) {
                     // Already at the beginning of the page, load the previous page
                     if (pageNum === 1) {
                         // Already at the beginning of the book, do nothing
                         return;
                     }
-                    loadPage(pageNum - 1);
-                    return;
+                    await loadPage(pageNum - 1);
+                    topWord = totalWords;  // Set topWord to the end of the page to trigger a search for the beginning of the page
                 }
-                topWord = getPrevViewport();
+                topWord = findViewportStart();
                 fillContainerWithWords(topWord);
                 reportVieportChange();
             }
 
             function handleNextButtonClick() {
                 let lastWordIndex = getLastVisibleWord();
-                console.log('Last word index:', lastWordIndex);
                 if (lastWordIndex >= wordsArray.length - 1) {
                     // Last word is already visible, load the next page
                     loadPage(pageNum + 1);
